--- a/proyecto-angular/app/view/customer-list.html
+++ b/proyecto-angular/app/view/customer-list.html
@@ -26,11 +26,13 @@ tr:nth-child(even) {
 		<img id ="ima" src="../../assets/images/loader.gif" />
 
 	</li>
-    <select [(ngModel)]="selectedValue" (ngModelChange)="getProductosPerCustomer2(selectedValue)" >
+    <select [(ngModel)]="selectedValue" (ngModelChange)="getProductosPerCustomer2(selectedValue); cleanArray();" >
      <option value="" [selected]="isSelected"> Please choose one </option>
     <option *ngFor=" #i of customers" [value]="i.customerId">{{i.name}}</option>
 </select>
 </ul>
+
+
 
 
   <!--<ul>
@@ -61,12 +63,12 @@ tr:nth-child(even) {
     <tr *ngFor=" #item of products">
         <td>{{item.name}}</td>
         <td>{{item.description}}</td>
-         <td>{{item.categoryId}}</td>
+         <td>{{item.price}}</td>
 
-        <td><a class="btn btn-ver">Adicionar</a></td>
+        <td><button  class="btn btn-ver" (click)="log(item.productId,item.name,item.description)">Adicionar</button></td>
 
     </tr>
-
+ 
 
 
 </table>
@@ -75,18 +77,45 @@ tr:nth-child(even) {
     <h1>Generate Order</h1>
     <br>
 
+    <table>
+
+    
+        <th style="width: 20%">
+            <mfDefaultSorter by="name">name</mfDefaultSorter>
+        </th>
+            
+        <th style="width: 20%">
+            <mfDefaultSorter by="description">Action</mfDefaultSorter>
+        </th>
+       
+  
+    <tr *ngFor=" #item of productosOrder">
+        <td>{{item.name}}</td>
+  
+
+        <td><button  class="btn btn-eliminar" (click)="delete(item)">Eliminar</button></td>
+
+    </tr>
+   
+     </table>
+
+     
 	<section> 
+      <br>
+    <br>
 
 		please enter the following information:
 		<br>
 		<br>
     <div>
-		Delivey date: <input type="text" name="fname"><br>
+
 		<br>
 		
-		Delivery address: <input type="text" name="fname"><br>
+		Delivery address: <input type="text" name="fname" [(ngModel)]="textValue" required><br>
    </div>
-
+   <br>
+   <br>
+   <button mat-button *ngFor=" #item of productosOrder" (click)="imprimir(item.name)">Generate Order</button>
 
 	</section>
 	
